--- a/insinhoputrapratama/clients.html
+++ b/insinhoputrapratama/clients.html
@@ -74,19 +74,14 @@
         <div class="container py-14 py-md-16">
           <p class="text-center mb-8">Trusted by over 2K+ clients across the world</p>
           <div class="swiper-container clients mb-0" data-margin="30" data-dots="false" data-loop="true" data-autoplay="true" data-autoplaytime="1" data-drag="false" data-speed="5000" data-items-xxl="7" data-items-xl="6" data-items-lg="5" data-items-md="4" data-items-xs="2">
-            <div class="swiper">
+            <div class="swiper brand-swiper">
               <div class="swiper-wrapper ticker">
-                <div class="swiper-slide px-5"><img src="./assets/img/brands/c1.png" alt="" /></div>
-                <div class="swiper-slide px-5"><img src="./assets/img/brands/c2.png" alt="" /></div>
-                <div class="swiper-slide px-5"><img src="./assets/img/brands/c3.png" alt="" /></div>
-                <div class="swiper-slide px-5"><img src="./assets/img/brands/c4.png" alt="" /></div>
-                <div class="swiper-slide px-5"><img src="./assets/img/brands/c5.png" alt="" /></div>
-                <div class="swiper-slide px-5"><img src="./assets/img/brands/c6.png" alt="" /></div>
-                <div class="swiper-slide px-5"><img src="./assets/img/brands/c7.png" alt="" /></div>
-                <div class="swiper-slide px-5"><img src="./assets/img/brands/c8.png" alt="" /></div>
-                <div class="swiper-slide px-5"><img src="./assets/img/brands/c9.png" alt="" /></div>
-                <div class="swiper-slide px-5"><img src="./assets/img/brands/c10.png" alt="" /></div>
-                <div class="swiper-slide px-5"><img src="./assets/img/brands/c11.png" alt="" /></div>
+                <div class="swiper-slide px-5"><img src="./assets/img/brands/kemenhub_logo.webp" alt="" /></div>
+                <div class="swiper-slide px-5"><img src="./assets/img/brands/kementrian_kelautan_logo.webp" alt="" /></div>
+                <div class="swiper-slide px-5"><img src="./assets/img/brands/proskuneo_logo.webp" alt="" /></div>
+                <div class="swiper-slide px-5"><img src="./assets/img/brands/wika_gedung_logo_1.webp" alt="" /></div>
+                <div class="swiper-slide px-5"><img src="./assets/img/brands/wika_industri_logo.webp" alt="" /></div>
+                <div class="swiper-slide px-5"><img src="./assets/img/brands/wika_logo.webp" alt="" /></div>
               </div>
               <!--/.swiper-wrapper -->
             </div>
@@ -116,7 +111,7 @@
             <div class="col">
               <div class="card shadow-lg h-100 align-items-center">
                 <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
-                  <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/brands/z1.png" alt="" /></figure>
+                  <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/brands/kemenhub_logo.webp" alt="" /></figure>
                 </div>
                 <!--/.card-body -->
               </div>
@@ -126,7 +121,7 @@
             <div class="col">
               <div class="card shadow-lg h-100 align-items-center">
                 <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
-                  <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/brands/z2.png" alt="" /></figure>
+                  <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/brands/kementrian_kelautan_logo.webp" alt="" /></figure>
                 </div>
                 <!--/.card-body -->
               </div>
@@ -136,7 +131,7 @@
             <div class="col">
               <div class="card shadow-lg h-100 align-items-center">
                 <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
-                  <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/brands/z3.png" alt="" /></figure>
+                  <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/brands/proskuneo_logo.webp" alt="" /></figure>
                 </div>
                 <!--/.card-body -->
               </div>
@@ -146,7 +141,7 @@
             <div class="col">
               <div class="card shadow-lg h-100 align-items-center">
                 <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
-                  <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/brands/z4.png" alt="" /></figure>
+                  <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/brands/wika_gedung_logo_1.webp" alt="" /></figure>
                 </div>
                 <!--/.card-body -->
               </div>
@@ -156,7 +151,7 @@
             <div class="col">
               <div class="card shadow-lg h-100 align-items-center">
                 <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
-                  <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/brands/z5.png" alt="" /></figure>
+                  <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/brands/wika_industri_logo.webp" alt="" /></figure>
                 </div>
                 <!--/.card-body -->
               </div>
@@ -166,96 +161,7 @@
             <div class="col">
                 <div class="card shadow-lg h-100 align-items-center">
                   <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
-                    <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/brands/z1.png" alt="" /></figure>
-                  </div>
-                  <!--/.card-body -->
-                </div>
-                <!--/.card -->
-              </div>
-              <!--/column -->
-              <div class="col">
-                <div class="card shadow-lg h-100 align-items-center">
-                  <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
-                    <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/brands/z2.png" alt="" /></figure>
-                  </div>
-                  <!--/.card-body -->
-                </div>
-                <!--/.card -->
-              </div>
-              <!--/column -->
-              <div class="col">
-                <div class="card shadow-lg h-100 align-items-center">
-                  <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
-                    <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/brands/z3.png" alt="" /></figure>
-                  </div>
-                  <!--/.card-body -->
-                </div>
-                <!--/.card -->
-              </div>
-              <!--/column -->
-              <div class="col">
-                <div class="card shadow-lg h-100 align-items-center">
-                  <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
-                    <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/brands/z4.png" alt="" /></figure>
-                  </div>
-                  <!--/.card-body -->
-                </div>
-                <!--/.card -->
-              </div>
-              <!--/column -->
-              <div class="col">
-                <div class="card shadow-lg h-100 align-items-center">
-                  <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
-                    <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/brands/z5.png" alt="" /></figure>
-                  </div>
-                  <!--/.card-body -->
-                </div>
-                <!--/.card -->
-              </div>
-              <div class="col">
-                <div class="card shadow-lg h-100 align-items-center">
-                  <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
-                    <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/brands/z1.png" alt="" /></figure>
-                  </div>
-                  <!--/.card-body -->
-                </div>
-                <!--/.card -->
-              </div>
-              <!--/column -->
-              <div class="col">
-                <div class="card shadow-lg h-100 align-items-center">
-                  <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
-                    <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/brands/z2.png" alt="" /></figure>
-                  </div>
-                  <!--/.card-body -->
-                </div>
-                <!--/.card -->
-              </div>
-              <!--/column -->
-              <div class="col">
-                <div class="card shadow-lg h-100 align-items-center">
-                  <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
-                    <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/brands/z3.png" alt="" /></figure>
-                  </div>
-                  <!--/.card-body -->
-                </div>
-                <!--/.card -->
-              </div>
-              <!--/column -->
-              <div class="col">
-                <div class="card shadow-lg h-100 align-items-center">
-                  <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
-                    <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/brands/z4.png" alt="" /></figure>
-                  </div>
-                  <!--/.card-body -->
-                </div>
-                <!--/.card -->
-              </div>
-              <!--/column -->
-              <div class="col">
-                <div class="card shadow-lg h-100 align-items-center">
-                  <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
-                    <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/brands/z5.png" alt="" /></figure>
+                    <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/brands/wika_logo.webp" alt="" /></figure>
                   </div>
                   <!--/.card-body -->
                 </div>
