--- a/insinhoputrapratama/index.html
+++ b/insinhoputrapratama/index.html
@@ -219,37 +219,28 @@
           <div class="col-lg-8">
             <div class="row row-cols-2 row-cols-md-4 gx-0 gx-md-8 gx-xl-12 gy-12">
               <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/z1.png" alt="" /></figure>
+                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/kemenhub_logo.webp" alt="" /></figure>
               </div>
               <!--/column -->
               <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/z2.png" alt="" /></figure>
+                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/kementrian_kelautan_logo.webp" alt="" /></figure>
               </div>
               <!--/column -->
               <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/z3.png" alt="" /></figure>
+                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/proskuneo_logo.webp" alt="" /></figure>
               </div>
               <!--/column -->
               <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/z4.png" alt="" /></figure>
+                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/wika_gedung_logo_1.webp" alt="" /></figure>
               </div>
               <!--/column -->
               <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/z5.png" alt="" /></figure>
+                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/wika_industri_logo.webp" alt="" /></figure>
               </div>
               <!--/column -->
               <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/z6.png" alt="" /></figure>
+                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/wika_logo.webp" alt="" /></figure>
               </div>
-              <!--/column -->
-              <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/z7.png" alt="" /></figure>
-              </div>
-              <!--/column -->
-              <div class="col">
-                <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/z8.png" alt="" /></figure>
-              </div>
-              <!--/column -->
             </div>
             <!--/.row -->
           </div>
