--- a/insinhoputrapratama/projects.html
+++ b/insinhoputrapratama/projects.html
@@ -57,6 +57,13 @@
     <!-- /header -->
     <!-- /section -->
     <section class="wrapper bg-light">
+      <div class="container pt-14 pt-md-16">
+        <div class="row">
+          <div class="col-lg-9 col-xl-8 col-xxl-7 mx-auto text-center">
+            <h2 class="fs-15 text-uppercase text-muted">Latest Projects</h2>
+          </div>
+          <!-- /column -->
+        </div>
       <div class="container py-14 py-md-16">
         <swiper-container class="mySwiper rounded" auto-height="true" space-between="20" navigation="true" pagination="true"
     pagination-clickable="true">
@@ -65,7 +72,6 @@
           <swiper-slide><img src="./assets/img/photos/photo3.webp" alt=""></swiper-slide>
           <swiper-slide><img src="./assets/img/photos/photo4.webp" alt=""></swiper-slide>
           <swiper-slide><img src="./assets/img/photos/photo5.webp" alt=""></swiper-slide>
-          <swiper-slide><img src="./assets/img/photos/photo6.webp" alt=""></swiper-slide>
           <swiper-slide><img src="./assets/img/photos/photo6.webp" alt=""></swiper-slide>
           <swiper-slide><img src="./assets/img/photos/photo7.webp" alt=""></swiper-slide>
           <swiper-slide><img src="./assets/img/photos/photo8.webp" alt=""></swiper-slide>
@@ -77,9 +83,13 @@
           <swiper-slide><img src="./assets/img/photos/photo14.webp" alt=""></swiper-slide>
           <swiper-slide><img src="./assets/img/photos/photo15.webp" alt=""></swiper-slide>
           <swiper-slide><img src="./assets/img/photos/photo16.webp" alt=""></swiper-slide>
+          <swiper-slide><img src="./assets/img/photos/photo17.webp" alt=""></swiper-slide>
+          <swiper-slide><img src="./assets/img/photos/photo18.webp" alt=""></swiper-slide>
         </swiper-container>
       </div>
     </section>
+
+    <!-- /section -->
     
     <!-- /section -->
   </div>
